public/assets/stylesheets/style.css
/* ... */
.pagination .prev a {
  background-image: url("../images/icons/blue/arr_1left.svg");
  -webkit-background-size: 16px 16px;
  -moz-background-size: 16px 16px;
  -o-background-size: 16px 16px;
  background-size: 16px 16px;
}
.pagination .next a {
  background-image: url("../images/icons/blue/arr_1right.svg");
  -webkit-background-size: 16px 16px;
  -moz-background-size: 16px 16px;
  -o-background-size: 16px 16px;
  background-size: 16px 16px;
}
#rulelist div.admissionrule {
  display: list-item;
  list-style-type: disc;
  margin-left: 25px;
}
.hover_box div {
  display: inline;
}
.hover_box .action_icons {
  display: inline;
  margin-left: 15px;
}
.condition {
  margin-left: 20px;
}
.userlist_user a {
  visibility: hidden;
}
.userlist_user:hover a {
  visibility: visible;
}
.check_actions {
  font-weight: normal;
}
.check_actions a {
  cursor: pointer;
}
#enrollment ul {
  list-style: none inside;
  margin: 0px;
  border-top: 1px solid #1E3E70;
  padding: 0px;
  cursor: move;
}
#enrollment ul li {
  padding: 5px;
  border-bottom: 1px solid #1E3E70;
}
#selected-courses li {
  list-style-type: decimal;
}
#enrollment ul li.empty {
  cursor: no-drop;
  list-style-type: none;
}
#enrollment input[name="filter"] {
  margin-bottom: 20px;
}
#enrollment ul {
  max-height: 200px;
  overflow-x: auto;
}
#enrollment .ui-draggable.ui-draggable-dragging,
#enrollment .ui-sortable-helper {
  background-color: #CED8F2;
  padding: 5px;
  border: 1px solid #1E3E70;
  list-style: none inside;
  width: auto;
}
#enrollment ul li.ui-sortable-helper {
  list-style-type: none;
}
#enrollment .ui-sortable-helper .delete {
  display: none;
}
#enrollment ul li .delete {
  cursor: pointer;
  float: right;
}
#enrollment ul li .delete:after {
  clear: both;
}
#enrollment ul#avaliable-courses li.visible:hover,
#enrollment ul#selected-courses li:hover {
  background-color: #CED8F2;
}
#enrollment ul#avaliable-courses li.visible:nth-child(even),
#enrollment ul#selected-courses li:nth-child(even) {
  background-color: #F8F8F8;
}
#enrollment ul#avaliable-courses li.visible:nth-child(odd),
#enrollment ul#selected-courses li:nth-child(odd) {
  background-color: #EEEEEE;
}
#enrollment .ui-state-highlight {
  padding: 10px;
  background: #CB1800;
  border: 0px;
  height: 30px;
}
.ui-widget-overlay {
  background: rgba(40, 73, 124, 0.5);
  opacity: 1;
  position: fixed;
}
.ui-dialog.ui-widget.ui-widget-content {
  border: 3px solid white;
  padding: 0;
  -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
  -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
}
.ui-dialog.ui-widget.ui-widget-content .hide-in-dialog {
  display: none;
}
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-titlebar {
  background: #1f4171;
  border: 0;
  color: #ffffff;
  font-size: 1.3em;
  font-weight: normal;
}
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-titlebar-close {
  width: 32px;
  height: 32px;
  background: inherit;
  border: 0;
  line-height: 32px;
  margin-top: -16px;
  padding: 0;
  text-align: center;
}
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-titlebar-close:hover {
  width: 32px;
  height: 32px;
  background: inherit;
  border: 0;
  margin-top: -16px;
  padding: 0;
}
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-titlebar-close .ui-icon {
  width: 16px;
  height: 16px;
  background-image: url("../images/icons/white/decline.svg");
  -webkit-background-size: 16px 16px;
  -moz-background-size: 16px 16px;
  -o-background-size: 16px 16px;
  background-size: 16px 16px;
  background-position: 0;
  display: inline-block;
  margin: 0;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  -o-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-titlebar-close .ui-icon:hover {
  background-image: url("../images/icons/white/decline.svg");
  -webkit-background-size: 16px 16px;
  -moz-background-size: 16px 16px;
  -o-background-size: 16px 16px;
  background-size: 16px 16px;
}
.ui-dialog.ui-widget.ui-widget-content.no-close .ui-dialog-titlebar-close {
  display: none;
}
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-buttonpane {
  padding: 0.5em 0.4em;
  margin: 0 1em;
  border-color: #d4dbe5;
}
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-buttonpane .ui-dialog-buttonset {
  text-align: center;
  float: none;
}
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-buttonpane .ui-button {
  background: white;
  border: 1px solid #28497c;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  color: #28497c;
  cursor: pointer;
  display: inline-block;
  font-family: "Lato", sans-serif;
  font-size: 14px;
  line-height: 130%;
  margin: 0.8em 0.6em 0.8em 0;
  min-width: 100px;
  overflow: visible;
  padding: 5px 15px;
  position: relative;
  text-align: center;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
  -webkit-transition: none;
  -moz-transition: none;
  -o-transition: none;
  transition: none;
  font-weight: bold;
}
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-buttonpane .ui-button:hover,
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-buttonpane .ui-button:active {
  background: #28497c;
  color: white;
  outline: 0;
}
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-buttonpane .ui-button:focus {
  outline: dotted 1px #000;
}
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-buttonpane .ui-button::-moz-focus-inner {
  border: 0;
}
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-buttonpane .ui-button.disabled,
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-buttonpane .ui-button[disabled] {
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  background: #e2e3e5;
  cursor: default;
  opacity: 0.65;
}
/* ... */

